# Drops-Dapp

./: README.md
Admin (Drops DAPP)/: package-lock.json  package.json
Admin (Drops DAPP)/src/: App.js
Admin (Drops DAPP)/src/components/: Drop.js  Header.js
Admin (Drops DAPP)/src/provider/: NearProvider.js
User (Drops DAPP)/: package-lock.json  package.json
User (Drops DAPP)/src/: App.js
User (Drops DAPP)/src/components/: Collection.js  DropCard.js  Drops.js  DropsCollection.js  Header.js  Modal.js  NftCard.js  NftCollection.js
User (Drops DAPP)/src/provider/: NearProvider.js
src/: Cargo.toml  build.sh  deploy.sh
src/ncd_drops/: Cargo.toml
src/ncd_drops/src/: internals.rs  lib.rs  metadata.rs  nft_calls.rs
src/ncd_nft/: Cargo.toml  build.sh  deploy.sh  init.sh
src/ncd_nft/src/: enumeration.rs  internal.rs  lib.rs  meta.rs
src/shell_scripts/: 1.metadata_insert.sh  2.nft_price_insert.sh  3.supply_cap_insert.sh  4.drop_insert.sh  5.nft_purchase_callback.sh  get_price_of_nft.sh  init.sh
