[package]
name = "src"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
near-sdk = "3.1.0"
near-sdk-sim = "3.1.0"

[dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.1.0"


drops = {path= "./ncd_drops"}
nft = {path= "./ncd_nft"}


[workspace]
# remember to include a member for each contract
members = [
 "ncd_drops",
 "ncd_nft", 
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
